2025-07-15  Zhengyi Fu  <i@fuzy.me>

	* init.el: Refactor and update comments.
	* packages.el: Remove gptel-quick.

2025-07-15  Zhengyi Fu  <i@fuzy.me>

	* init.el (auth-sources-gpg-encrypt-to): Set to a list.

2025-07-14  Zhengyi Fu  <i@fuzy.me>

	Remove configuration for browser-hist

	* init.el:

2025-07-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix): Refactor
	function.  Fix wrong buffer name.

2025-07-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-cmds.el: Remove file.

2025-07-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el ("Moonshot"): Add definition for
	Moonshot backend.

2025-07-11  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config.el

	* site-lisp/gptel-config.el (+gptel-edit-file): Optimize the UX.
	(run_async_command): Remove.
	(+gptel-edit-buffer): New function.
	(+gptel-shellcheck-fix): New command.

2025-07-10  Zhengyi Fu  <i@fuzy.me>

	* packages.el (git-modes): Add package `git-modes'.

	* init.el (+elfeed-db-sync): Remove function.
	(eat-tramp-shells): Set shell for scp method.

2025-07-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Disable `visual-wrap-prefix-mode', because it conflicts
	with `telega-chat-mode'.

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	Update configuration for svn

	* init.el (send-password-to-process): New command.
	(send-password-to-buffer-process): Remove command.
	(vc-svn-global-switches): Remove --force-interactive.

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	Remove reader

	* packages.el:

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	Optimize tramp performance

	* init.el (remote-direct-async-process): New connection local profile.
	(magit-tramp-pipe-stty-settings): Set to `pty'.

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Do not use systemd-run which causes
	problems.

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (vc-svn-global-switches): Use gnome-keyring for password
	stores.

2025-07-04  Zhengyi Fu  <i@fuzy.me>

	Improve eat shell integration on remote machines
